--- a/src/views/products/products.ejs
+++ b/src/views/products/products.ejs
@@ -23,7 +23,7 @@
 
                         <article>
 
-                            <a href="/products/detail/<%= product.id %>" class="etiqueta-link">
+                            <a href="/products/detalles/<%= product.id %>" class="etiqueta-link">
                             
                                 <div class="div-producto">
 
