--- a/src/views/products/detalles.ejs
+++ b/src/views/products/detalles.ejs
@@ -70,8 +70,18 @@
                                 <p><%= product.size%> cc</p>
                             </div>
 
-                            <div class="details precio">
-                                <h3>$<%= product.price%></h3>
+                            <div class="contenedor-precio-descuento">
+
+                                <div class="details precio">
+                                    <h3>$<%= product.price%></h3>
+                                </div>
+                                
+                                <%if(product.discount > 0) {%> 
+                                    <div class="details descuentos">
+                                        <h3><%= product.discount%>% OFF</h3>
+                                    </div>
+                                <%}%>
+
                             </div>
 
                             <div>
