--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -1,133 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+  <%- include("../partials/head.ejs") %>
 
-<%- include("../partials/head.ejs") %>
-
-<body>
-
+  <body>
     <%- include("../partials/header.ejs") %>
 
     <main>
-
+      <div>
         <div>
-
-            <div>
-
-                <h2>Formulario de creación de productos</h2>
-
-            </div>
-
-            <div>
-
-                <form action="/products/" method="POST" enctype="multipart/form-data">
-
-                    <div>
-
-                        <div>
-                            <label for="name" class="form-label">Nombre del producto:</label>
-                            <input type="text" id="name" name="name" placeholder="Ej: Luigi Bosca Pinot Noir" class="form-input" value="<%= locals.oldData ? oldData.name : null %>">
-                        </div>
-                        <% if(locals.errors && errors.name) {%> 
-                            <div class="text-danger">
-                                <%= errors.name.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="price" class="form-label">Precio:</label>
-                            <input type="text" id="price" name="price" placeholder="Ej: 222" class="form-input" value="<%= locals.oldData ? oldData.price : null %>">
-                        </div>
-                        <% if(locals.errors && errors.price) {%> 
-                            <div class="text-danger">
-                                <%= errors.price.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="discount" class="form-label">Descuento:</label>
-                            <input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input" value="<%= locals.oldData ? oldData.discount : null %>">
-                        </div>
-                        <% if(locals.errors && errors.discount) {%> 
-                            <div class="text-danger">
-                                <%= errors.discount.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="size" class="form-label">Tamaño:</label>
-                            <input type="text" id="size" name="size" placeholder="Ej: 750" class="form-input" value="<%= locals.oldData ? oldData.size : null %>">
-                        </div>
-                        <% if(locals.errors && errors.size) {%> 
-                            <div class="text-danger">
-                                <%= errors.size.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="bodega" class="form-label">Bodega:</label>
-                            <input type="text" id="bodega" name="bodega" placeholder="Ej: Luigi Bosca" class="form-input" value="<%= locals.oldData ? oldData.bodega : null %>">
-                        </div>
-                        <% if(locals.errors && errors.bodega) {%> 
-                            <div class="text-danger">
-                                <%= errors.bodega.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="provincia" class="form-label">Provincia:</label>
-                            <input type="text" id="provincia" name="provincia" placeholder="Ej: Mendoza" class="form-input" value="<%= locals.oldData ? oldData.provincia : null %>">
-                        </div>
-                        <% if(locals.errors && errors.provincia) {%> 
-                            <div class="text-danger">
-                                <%= errors.provincia.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="category" class="form-label">Categoría:</label>
-                            <input type="category" id="category" name="category" placeholder="Categoría" class="form-input" value="<%= locals.oldData ? oldData.category : null %>">
-                        </div>
-                        <% if(locals.errors && errors.category) {%> 
-                            <div class="text-danger">
-                                <%= errors.category.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="description" class="form-label">Descripción:</label>
-                            <textarea id="description" name="description" placeholder="Descripción del producto" class="form-input" value="<%= locals.oldData ? oldData.description : null %>"></textarea>
-                        </div>
-                        <% if(locals.errors && errors.description) {%> 
-                            <div class="text-danger">
-                                <%= errors.description.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <label for="image" class="form-label">Imagen del producto:</label>
-                            <input type="file" id="image" name="image" class="form-input">
-                        </div>
-                        <% if(locals.errors && errors.image) {%> 
-                            <div class="text-danger">
-                                <%= errors.image.msg %>
-                            </div>
-                        <% } %> 
-
-                        <div>
-                            <input type="submit" class="boton-crear" value="Crear">
-                        </div>
-
-                    </div>
-
-                </form>
-
-            </div>
-
+          <h2>Formulario de creación de productos</h2>
         </div>
 
+        <div>
+          <form action="/products/" method="POST" enctype="multipart/form-data">
+            <div>
+              <div>
+                <label for="name" class="form-label"
+                  >Nombre del producto:</label
+                >
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  placeholder="Ej: Luigi Bosca Pinot Noir"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.name : null %>"
+                />
+              </div>
+              <% if(locals.errors && errors.name) {%>
+              <div class="text-danger"><%= errors.name.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="price" class="form-label">Precio:</label>
+                <input
+                  type="text"
+                  id="price"
+                  name="price"
+                  placeholder="Ej: 222"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.price : null %>"
+                />
+              </div>
+              <% if(locals.errors && errors.price) {%>
+              <div class="text-danger"><%= errors.price.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="discount" class="form-label">Descuento:</label>
+                <input
+                  type="text"
+                  id="discount"
+                  name="discount"
+                  placeholder="Ej: 15"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.discount : null %>"
+                />
+              </div>
+              <% if(locals.errors && errors.discount) {%>
+              <div class="text-danger"><%= errors.discount.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="size" class="form-label">Tamaño:</label>
+                <input
+                  type="text"
+                  id="size"
+                  name="size"
+                  placeholder="Ej: 750"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.size : null %>"
+                />
+              </div>
+              <% if(locals.errors && errors.size) {%>
+              <div class="text-danger"><%= errors.size.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="bodega" class="form-label">Bodega:</label>
+                <input
+                  type="text"
+                  id="bodega"
+                  name="bodega"
+                  placeholder="Ej: Luigi Bosca"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.bodega : null %>"
+                />
+              </div>
+              <% if(locals.errors && errors.bodega) {%>
+              <div class="text-danger"><%= errors.bodega.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="provincia" class="form-label">Provincia:</label>
+                <input
+                  type="text"
+                  id="provincia"
+                  name="provincia"
+                  placeholder="Ej: Mendoza"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.provincia : null %>"
+                />
+              </div>
+              <% if(locals.errors && errors.provincia) {%>
+              <div class="text-danger"><%= errors.provincia.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="category" class="form-label">Categoría:</label>
+                <input
+                  type="category"
+                  id="category"
+                  name="category"
+                  placeholder="Categoría"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.category : null %>"
+                />
+              </div>
+              <% if(locals.errors && errors.category) {%>
+              <div class="text-danger"><%= errors.category.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="description" class="form-label">Descripción:</label>
+                <textarea
+                  id="description"
+                  name="description"
+                  placeholder="Descripción del producto"
+                  class="form-input"
+                  value="<%= locals.oldData ? oldData.description : null %>"
+                ></textarea>
+              </div>
+              <% if(locals.errors && errors.description) {%>
+              <div class="text-danger"><%= errors.description.msg %></div>
+              <% } %>
+
+              <div>
+                <label for="image" class="form-label"
+                  >Imagen del producto:</label
+                >
+                <input type="file" id="image" name="image" class="form-input" />
+              </div>
+              <% if(locals.errors && errors.image) {%>
+              <div class="text-danger"><%= errors.image.msg %></div>
+              <% } %>
+
+              <div>
+                <input type="submit" class="boton-crear" value="Crear" />
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
     </main>
 
     <%- include("../partials/footer.ejs") %>
-
-</body>
+  </body>
 </html>
