--- a/src/views/products/crear-producto.ejs
+++ b/src/views/products/crear-producto.ejs
@@ -13,8 +13,8 @@
 
         <div>
           <form action="/products/" method="POST" enctype="multipart/form-data">
-            <div>
-              <div>
+            <div class="contenedor-inputs">
+              <div class="label-input">
                 <label for="name" class="form-label"
                   >Nombre del producto:</label
                 >
@@ -26,12 +26,12 @@
                   class="form-input"
                   value="<%= locals.oldData ? oldData.name : null %>"
                 />
-              </div>
+              </div class="label-input">
               <% if(locals.errors && errors.name) {%>
               <div class="text-danger"><%= errors.name.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="price" class="form-label">Precio:</label>
                 <input
                   type="text"
@@ -46,7 +46,7 @@
               <div class="text-danger"><%= errors.price.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="discount" class="form-label">Descuento:</label>
                 <input
                   type="text"
@@ -61,7 +61,7 @@
               <div class="text-danger"><%= errors.discount.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="size" class="form-label">Tamaño:</label>
                 <input
                   type="text"
@@ -76,7 +76,7 @@
               <div class="text-danger"><%= errors.size.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="bodega" class="form-label">Bodega:</label>
                 <input
                   type="text"
@@ -91,7 +91,7 @@
               <div class="text-danger"><%= errors.bodega.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="provincia" class="form-label">Provincia:</label>
                 <input
                   type="text"
@@ -106,7 +106,7 @@
               <div class="text-danger"><%= errors.provincia.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="category" class="form-label">Categoría:</label>
                 <input
                   type="category"
@@ -121,7 +121,7 @@
               <div class="text-danger"><%= errors.category.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="description" class="form-label">Descripción:</label>
                 <textarea
                   id="description"
@@ -135,11 +135,11 @@
               <div class="text-danger"><%= errors.description.msg %></div>
               <% } %>
 
-              <div>
+              <div class="label-input">
                 <label for="image" class="form-label"
                   >Imagen del producto:</label
                 >
-                <input type="file" id="image" name="image" class="form-input" />
+                <input type="file" id="image" name="image" class="form-input boton-foto" />
               </div>
               <% if(locals.errors && errors.image) {%>
               <div class="text-danger"><%= errors.image.msg %></div>
