--- a/public/css/crear-producto.css
+++ b/public/css/crear-producto.css
@@ -1,14 +1,30 @@
+.contenedor-form {
+  padding: 50px 0;
+}
+
 .label-input {
   display: flex;
   flex-direction: column;
   margin: 10px 0;
 }
 
-.boton-foto {
+.input-foto {
   width: 90%;
 }
 
 .contenedor-inputs {
   padding: 20px;
+  border: solid 1px lightgray;
+}
+
+.description-input {
+  height: 100px;
+  width: 90%;
+  border: solid 1px lightgray;
+}
+
+.form-input {
+  height: 35px;
+  width: 90%;
   border: solid 1px lightgray;
 }
